--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Dance Party</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
+    <script src="src/spongebob.js"></script>
+    <script src="src/donutCat.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <span class="title">Dance Party</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpongebob">add Spongebob</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDonutCat">add Donut Cat</a>    
+    </div>
+    <div class="dancefloor"></div>
     <script src="src/init.js"></script>
   </body>
 </html>
