--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">Dance Party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpongebob">add Spongebob</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDonutCat">add Donut Cat</a>    
+      <span class="title">DANCE PARTY</span>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpongebob">Spongebob</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDonutCat">Donut Cat</a>    
     </div>
     <div class="dancefloor"></div>
     <script src="src/init.js"></script>
