Add dance battle functionality and styling

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,18 @@
     <script src="src/dancer.js"></script>
     <script src="src/spongebob.js"></script>
     <script src="src/donutCat.js"></script>
+    <script src="src/kanye.js"></script>
+    <script src="src/taylor.js"></script>
   </head>
   <body>
     <div class="topbar">
-      <span class="title">DANCE PARTY</span>
+      <a href="dancefloor.html" class="title">DANCE PARTY</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpongebob">Spongebob</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDonutCat">Donut Cat</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDonutCat">Donut Cat</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeKanye">Kanye</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeTaylor">Taylor</a>
+      <a href="#" class="lineUp">Line Up</a>    
+      <a href="#" class="danceBattle">Dance Battle!</a>
     </div>
     <div class="dancefloor"></div>
     <script src="src/init.js"></script>
